Donation Controller has coverage now

--- a/force-app/test/default/classes/SummitEventsRegister_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsRegister_TEST.cls
@@ -14,19 +14,19 @@ private class SummitEventsRegister_TEST {
         Test.setCurrentPage(pageRef);
         ApexPages.currentPage().getParameters().put('instanceID', seaTestInstances[1].Id);
         SummitEventsRegisterController registerController = new SummitEventsRegisterController();
-        registerController.getSexDD();
-        registerController.getStateDD();
-        registerController.getCountryDD();
-        registerController.getTimeFrame();
-        registerController.getThirdPartyStatus();
-        registerController.getApplicantTypeDD();
-        registerController.getRelationshipDD();
+        System.assert(registerController.getSexDD().size() > 0);
+        System.assert(registerController.getStateDD().size() > 0);
+        System.assert(registerController.getCountryDD().size() > 0);
+        System.assert(registerController.getTimeFrame().size() > 0);
+        System.assert(registerController.getThirdPartyStatus().size() > 0);
+        System.assert(registerController.getApplicantTypeDD().size() > 0);
+        System.assert(registerController.getRelationshipDD().size() > 0);
+        System.assert(registerController.getPronounDD().size() > 0);
         Test.stopTest();
     }
 
     @IsTest static void testEventWithEmailRestrictions() {
         List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
-
         Test.startTest();
         //Add instance ID to register page
         PageReference pageRef = Page.SummitEventsRegister;
@@ -34,8 +34,6 @@ private class SummitEventsRegister_TEST {
         ApexPages.currentPage().getParameters().put('instanceID', seaTestInstances[1].Id);
         SummitEventsRegisterController registerCtrl = new SummitEventsRegisterController();
         registerCtrl.eventRegistration = SummitEventsTestSharedDataFactory.createEventRegistrationObj('TestFirst', 'Test', 'TestLast', 'test@valleyhill.net', '55418', '(555) 444-4444', '1989-03-22', '2002');
-        registerCtrl.saveContactRegistration();
-//        UST_Event_Registration__c evtReg2 = TestUSTEventSharedDataFactory.createEventRegistration(seaTestInstances, 'TestFirst', 'TestLast', 'test@valleyhill.net', '55418', '1971-03-22', '2012', null);
         registerCtrl.saveContactRegistration();
         registerCtrl.eventRegistration.Registrant_Email__c = 'test2@valleyhill.net';
         registerCtrl.eventRegistration.Registrant_Date_of_Birth__c = Date.valueOf('1989-03-22');
@@ -59,7 +57,6 @@ private class SummitEventsRegister_TEST {
         registerCtrl = new SummitEventsRegisterController();
         registerCtrl.eventRegistration = SummitEventsTestSharedDataFactory.createEventRegistrationObj('MatchFirst', 'Match', 'MatchLast', 'match@valleyhill.net', '55555', '(555) 555-5555', '1971-03-22', '2012');
         registerCtrl.saveContactRegistration();
-
 
         registerCtrl.saveContactRegistration();
         Test.stopTest();
