--- a/force-app/test/default/classes/SummitEventsRegisterAppointment_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsRegisterAppointment_TEST.cls
@@ -9,6 +9,14 @@ private class SummitEventsRegisterAppointment_TEST {
         SummitEventsTestSharedDataFactory.createContact('TestFirst1', 'Test', 'TestLast1', 'test1@valleyhill.net', '55418', '(555) 555-5555', '1971-03-22', '2012');
         List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
         Summit_Events_Registration__c seaTestRegistration = SummitEventsTestSharedDataFactory.createEventRegistration(seaTestInstances[1], 'TestFirst', 'TestLast', 'test@valleyhill.net', '55418', '1971-03-22', '2012', null);
+        List<Summit_Events_Appointment_Type__c> testAppointmentTypes = SummitEventsTestSharedDataFactory.createAppointmentTypes(seaTestInstances[1].Event__c);
+//        List<Summit_Events_Appointments__c> testAppointments = new List<Summit_Events_Appointments__c>();
+//        for (Summit_Events_Appointment_Type__c appointmentType : testAppointmentTypes) {
+//            Summit_Events_Appointments__c appointment = new Summit_Events_Appointments__c();
+//            appointment.Event_Registration__c = seaTestRegistration.Id;
+//            testAppointments.add(appointment);
+//        }
+//        insert testAppointments;
 
         Test.startTest();
         SummitEventsRegisterAppointmentCtlr optionsCtrl = new SummitEventsRegisterAppointmentCtlr();
@@ -24,9 +32,8 @@ private class SummitEventsRegisterAppointment_TEST {
         optionsCtrl.incomingAppointmentJSON = '[]';
         optionsCtrl.saveOptions();
 
-        List<Summit_Events_Appointment_Type__c> newAppointmentTypes = [SELECT Id, Title__c FROM Summit_Events_Appointment_Type__c WHERE Summit_Events__c = :seaTestInstances[1].Event__c];
         String jsonAppointments = '[';
-        for (Summit_Events_Appointment_Type__c at : newAppointmentTypes) {
+        for (Summit_Events_Appointment_Type__c at : testAppointmentTypes) {
             jsonAppointments += '{"apptId":"' + at.Id + '","apptCategory":"","apptType":"","apptText":"","apptTitle":"' + at.Title__c + '"},';
         }
         jsonAppointments = jsonAppointments.removeEnd(',');
